--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,17 +1,20 @@
 server {
 
-  listen 80 default;
+    listen 80 default_server;
+    server_name localhost;
 
-  location ^~ /uploads/ {
     root /home/box/web;
-  }
 
-  location ~* ^.+\.\w+$ {
-    root /home/box/web/public;
-  }
+    location ^~ /uploads/ {
+        root /home/box/web;
+    }
 
-  location / {
-    return 404;
-  }
+    location ~* ^.+\.\w+$ {
+        root /home/box/web/public;
+    }
+
+    location / {
+        return 404;
+    }
   
 }
