--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,10 +4,16 @@ server {
     server_name localhost;
 
     root /home/box/web;
+    
+    location ^~ /hello/ {
+        proxy_pass http://127.0.0.1/hello/
+    }
 
     location ^~ /uploads/ {
         root /home/box/web;
     }
+
+    
 
     location ~* ^.+\.\w+$ {
         root /home/box/web/public;
