правка в файлы nginx и init

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,6 +4,10 @@ server {
     server_name localhost;
 
     root /home/box/web;
+
+    location /hello/ {
+        proxy_pass http://0.0.0.0:8080;
+    }
     
     location ^~ /uploads/ {
         root /home/box/web;
