--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,24 +1,7 @@
 server {
+    listen 80;
 
-    listen 80 default_server;
-    server_name localhost;
-
-    root /home/box/web;
-
-    location /hello/ {
+    location /hello/{
         proxy_pass http://0.0.0.0:8080;
     }
-    
-    location ^~ /uploads/ {
-        root /home/box/web;
-    }
-
-    location ~* ^.+\.\w+$ {
-        root /home/box/web/public;
-    }
-
-    location / {
-        return 404;
-    }
-  
 }
