--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,7 +1,9 @@
 server {
     listen 80;
+    proxy_set_header Host       $host;
+    proxy_set_header X-Real_IP  $remote_addr;
 
-    location /hello/{
+    location^~/hello/{
         proxy_pass http://0.0.0.0:8080;
     }
 }
