изменил пару файлов

--- a/etc/gunicorn.conf
+++ b/etc/gunicorn.conf
@@ -1,12 +1,12 @@
 CONFIG = {
     'mode': 'wsgi',
     'working_dir': '/home/box/web',
-    # 'python': '/usr/bin/python',
+    'python': '/usr/bin/python',
     'args': (
         '--bind=0.0.0.0:8080',
         '--daemon',
         '--workers=2',
-        '--timeout=60',
+        '--timeout=15',
         'hello:app',
     ),
 }
