--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,7 +3,15 @@ server {
     proxy_set_header Host       $host;
     proxy_set_header X-Real_IP  $remote_addr;
 
-    location^~/hello/{
+    location ~* \.\w+$ {
+        root /home/box/web/public;	    root /home/box/web/public;
+    }	
+
+    location /hello/ {
         proxy_pass http://0.0.0.0:8080;
     }
+
+    location / {
+        return 404;	    return 404;
+    }	 
 }
