--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,6 +4,8 @@ server {
     proxy_set_header X-Real_IP  $remote_addr;
 
     location /hello/ {
-        proxy_pass http://0.0.0.0:8080;
+        proxy_pass http://127.0.0.1:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     } 
 }
