--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,10 @@
 server {
-    listen 80;
-    proxy_set_header Host       $host;
-    proxy_set_header X-Real_IP  $remote_addr;
+  listen 80 default;
 
+    location / {
+        proxy_pass http://0.0.0.0:8000;
+    }
     location /hello/ {
         proxy_pass http://127.0.0.1:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    } 
+    }
 }
