--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,19 +1,12 @@
-server {
-
-  listen 80 default;
-  location / {
-    proxy_pass http://0.0.0.0:8000;
-}
-  location ^~ /hello/{
-    proxy_pass http://0.0.0.0:8080;
-  }
-  location ^~ /uploads/ {
-    root /home/box/web;
-  }
-
-  location ~* ^.+\.\w+$ {
-    root /home/box/web/public;
-  }
-
   
+server {
+  	listen 80 default;
+
+  	location / {
+    	proxy_pass http://0.0.0.0:8000;
+  	}
+
+  	location /hello/ {
+    	proxy_pass http://127.0.0.1:8080;
+    }
 }
